# coffer

./: .gitignore  .gitlab-ci.yml  COPYRIGHT.md  Cargo.toml  ChangeLog.md  NOTICE  README.md  TODO.md  build.rs  default.nix  shell.nix
.github/workflows/: ci.yml  rust.yml
benches/: insn.rs
benchmarking_licenses/: README.md  guava.txt  okhttp.txt  spark-copyright.txt  zxing-copyright.txt
bytecode/: Cargo.toml
bytecode/macro/: Cargo.toml
bytecode/macro/src/: code_block.rs  derive.rs  lib.rs
bytecode/src/: access.rs  attr.rs  byteswapper.rs  code.rs  constant_pool.rs  cp.rs  dynamic.rs  error.rs  flags.rs  index.rs  insn.rs  insns.rs  jcoder.rs  lib.rs  loadable.rs  member.rs  mod_utf8.rs  module.rs  prelude.rs  rw.rs  signature.rs  ty.rs  version.rs
bytecode/src/annotation/: mod.rs  type_annotation.rs
bytecode/src/code/: convert.rs  structure.rs
bytecode/src/constants/: access.rs  insn.rs  mod.rs  target_types.rs
bytecode/src/full/: code.rs  cp.rs  mod.rs  signature.rs  version.rs
bytecode/src/full/annotation/: mod.rs  type_annotation.rs
bytecode/src/tests/: exec.rs  full_type.rs  insn.rs  insns_type.rs  mod.rs  mutf8.rs
class_sample/: Cargo.toml
class_sample/src/: lib.rs
coffer_macros/: Cargo.toml
coffer_macros/src/: derive.rs  lib.rs
java/: AllOps.java  LotsOfStrings.java
src/: attr.rs  byteswapper.rs  clazz.rs  code.rs  constant_pool.rs  constants.rs  cp.rs  decoder.rs  dynamic.rs  error.rs  flags.rs  helper.rs  index.rs  insn.rs  jcoder.rs  lib.rs  loadable.rs  member.rs  mod_utf8.rs  module.rs  prelude.rs  rw.rs  signature.rs  tests.rs  total_floats.rs  ty.rs  version.rs
src/annotation/: mod.rs  type_annotation.rs
src/code/: convert.rs  gen_stack_map.rs  structure.rs
src/constants/: access.rs  insn.rs  mod.rs
src/tests/: code.rs  exec.rs  full_type.rs  insn.rs  mod.rs  mutf8.rs
wtf8/: Cargo.toml  README.md
wtf8/src/: lib.rs  std_internal.rs  tests.rs
