[package]
name = "coffer"
version = "1.0.0"
authors = ["Deadbeef"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bitflags = "1.0"
delegate = "0.4.3"
coffer-proc-macros = { path = "./macro" }

[dev-dependencies]
criterion = "0.3"
curl = "0.4"
zip = "0.5"
class_sample = { git = "https://github.com/fee1-dead/class-sample-rs", branch = "master" }


[[bench]]
name = "insn"
harness = false