[package]
name = "coffer"
version = "1.0.0"
authors = ["Deadbeef"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bitflags = "1.0"
delegate = "0.4.3"
nom = "6.0.1"
coffer-macros = { path = "./macro" }
indexmap = "1.6.1"

[dev-dependencies]
class_sample = { git = "https://github.com/fee1-dead/class-sample-rs" }
lazy_static = "1.4.0"

[features]
default = []
backtrace = []