[package]
name = "class_sample"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.3.4"
reqwest = "0.11.11"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
zip = "0.6.2"
